--- a/templates/base.html
+++ b/templates/base.html
@@ -2,40 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
+    <title>MTT</title>
     {% load bootstrap5 %}
     {% bootstrap_css %}
     {% bootstrap_javascript %}
+    <meta http-equiv="refresh" content="10">     {# Обновление страницы каждые content секунд #}
     
 </head>
 <body>
 
+<ul class="nav" style="background-color: #b9e5ff; display: flex;
+  justify-content: center; align-items: center">
+<H3>{% now "d F Y H:i l" %}</H3>
 
-
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+    {% for m in menu %}
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page"  href="#">{{ m }} |</a>
+      </li>
+    {% endfor menu%}
+</ul>
 
 {% block content %}
 
