--- a/Tasks/templates/Tasks/index.html
+++ b/Tasks/templates/Tasks/index.html
@@ -2,8 +2,6 @@
 
 
 {% block content %}
-    <div class="container" style="display: flex; flex-direction: row">
-{#        {{ calendar|safe }}#}
 
     <table class="table">
   <thead>
@@ -21,11 +19,10 @@
     </tr>
   </thead>
   <tbody>
-
         {% for task in tasks %}
             <tr>
             <th scope="row">{{ task.id }}</th>
-            <td>{{ task.title }}</td>
+            <td><a href="{{ task.get_absolute_url }}">{{ task.title }}</a></td>
             <td>{{ task.content }}</td>
             <td>{{ task.responce_worker }}</td>
             <td>!</td>
