Добавил возможность добавления задачи из браузера с помощью форм

--- a/Tasks/templates/Tasks/index.html
+++ b/Tasks/templates/Tasks/index.html
@@ -2,7 +2,8 @@
 
 
 {% block content %}
-
+        <button type="button" class="btn btn-info"><a href="{% url 'task_add' %}">Добавить задачу</a></button>
+    </form>
     <table class="table">
   <thead>
     <tr>
