--- a/Tasks/templates/Tasks/add-task.html
+++ b/Tasks/templates/Tasks/add-task.html
@@ -2,20 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>MTT</title>
+    <title>Добавление задачи</title>
     {% load bootstrap5 %}
     {% bootstrap_css %}
     {% bootstrap_javascript %}
+
+    <style>
+        ul li { list-style-type: none; }
+    </style>
+
 </head>
 
- <body class="text-center">
+ <body>
+ <div class="text-center">
     <form action=""  method="post">
      {% csrf_token %}
-
-    <div class="">
-    {{ form.as_p }}
-    </div>
-
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Добавить задачу</button>
+     {{ form.as_p }}
+        <button class="btn btn-lg btn-primary" type="submit">Добавить задачу</button>
     </form>
+
+</div>
 </body>
