--- a/Tasks/templates/Tasks/registration.html
+++ b/Tasks/templates/Tasks/registration.html
@@ -53,30 +53,16 @@
 </style>
 
 <div class="p-x-1 p-y-3">
- <form class="card card-block m-x-auto bg-faded form-width">
- <legend class="m-b-1 text-xs-center">Регистрация</legend>
- <div class="form-group input-group">
- <span class="has-float-label">
- <input class="form-control" id="first" type="text" placeholder="Имя"/>
- <label for="first">Имя</label>
- </span>
- <span class="has-float-label">
- <input class="form-control" id="last" type="text" placeholder="Фамилия"/>
- <label for="last">Фамилия</label>
- </span>
- </div>
+ <form class="card card-block m-x-auto bg-faded form-width" method="post">
 
- <div class="form-group has-float-label">
- <input class="form-control" id="password" type="password" placeholder="••••••••"/>
- <label for="password">Пароль</label>
- </div>
- <div class="form-group has-float-label">
- <input class="form-control" id="password" type="password" placeholder="••••••••"/>
- <label for="password">Пароль повторно</label>
- </div>
+     {% csrf_token %}
+     {{ form.as_p }}
 
  <div class="text-xs-center">
  <button class="btn btn-block btn-primary" type="submit">Регистрация</button>
  </div>
  </form>
+
+
+
 </div>
